Fixed meme image overflow

--- a/src/style.css
+++ b/src/style.css
@@ -65,8 +65,11 @@ main {
 .meme-container {
     position: relative;
     text-align: center;
-    max-width: 100%;
     margin: 1em 0;
+}
+
+.meme--image {
+    max-width: 100%;
 }
 
 #top-text,
